--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     line-height: 1.5;
     color: var(--darkColor);
     background-color: var(--lightColor);
+    min-height: 100vh;
 }
 #container {
     max-width: 1300px;
@@ -178,6 +179,11 @@ margin-block: 2rem;
     .cmdSite, .cmdLogiciel {
         display: none;
     }
+    .produits__title a, .services__title a,
+    .apropos__title a {
+        display: flex;
+        align-items: flex-start;
+    }
     .btn__menu {
         display: none;
     }
@@ -209,7 +215,33 @@ margin-block: 2rem;
     }
 }
 
+
+/* || MAIN || */
+.main {
+    height: 10rem;
+}
+
+
 /* || FOOTER || */
 .footer {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    row-gap: 2rem;
+    border-top: 1px solid;
+    padding: 3rem;
+}
+.footer__contact h2 {
+    margin-block: 1rem;
+}
+.footer .email a {
+    display: block;
+}
+.footer .email a:nth-child(1) {
+    text-decoration: line-through;
+}
+.footer .tel {
+    text-align: right;
+    margin: 0 2.5rem 1rem 0;
 }
