--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,700;1,600&family=Roboto:wght@300;400&display=swap');
+
+/* VARIABLES */
+:root {
+    --dark: #000000;
+    --light: #ffffff;
+    --gray: #484873;
+    --graySecond: #e6e6e6;
+    --spaceBlock: 20px;
+}
 
 /* RESET */
 *, ::before, ::after {
@@ -7,241 +16,218 @@
     padding: 0;
 }
 
-/* VARIABLES*/
-:root {
-
-    /* color variables */
-    --blueColor: #0707d4;
-    --yellowColor: yellow;
-    --pulpleColor: #30058f;
-    --lightColor: #fff;
-    --darkColor: #000;
-
-    /* spacing variables */
-    --pdbtn: 1rem;
-    --pdtop: 2.2rem;
-}
-
-/* || GENERAL STYLE || */
+/* STYLES GENERALS */
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    line-height: 1.5;
-    color: var(--darkColor);
-    background-color: var(--lightColor);
-    min-height: 100vh;
+    font-size: 16px;
+    line-height: 1.5em;
 }
 #container {
-    max-width: 1300px;
-    padding: var(--pdtop) 1.2rem;
     margin: 0 auto;
 }
-a {
-    text-decoration: none;
-    color: var(--darkColor);
+h1, h2, h3, h4 {
+    font-family: 'Lora', serif;
+    font-weight: 700;
+    font-size: 16px;
 }
 ul {
     list-style: none;
 }
+a {
+    text-decoration: none;
+    color: var(--dark);
+}
+svg {
+    width: 24px;
+    height: 24px;
+}
 
-/* || HEADER || */
-.header__navbar {
-    font-size: 1.1rem;
-    font-weight: 700;
+/* HEADER */
+header {
+    padding: var(--spaceBlock);
+}
+.header__nav {
+    font-size: 1.2rem;
     display: flex;
     justify-content: space-between;
 }
-.header__navbar__links {
+.header__nav__logo {
+    font-family: 'Lora', serif;
+    font-size: 1.2rem;
+}
+.header__nav__logo + div {
     display: flex;
+    justify-content: space-between;
 }
-.header__navbar__links .link {
-    display: none;
-}
-.link h2 {
-    font-size: 1.1rem;
-}
-.header__navbar__links .btn {
-    display: flex;
-    column-gap: 2rem;
-}
-.header__navbar__links--active {
-    flex-direction: column;
+.header__nav-active .header__nav__logo + div {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 0;
-    width: 70%;
+    background-color: var(--graySecond);
+    width: 75%;
     height: 100vh;
-    background-color: var(--lightColor);
-    padding: var(--pdtop) 2.5rem;
+    padding: var(--spaceBlock);
+    transition: background-color .6s;
 }
-.header__navbar__links--active .link {
-    display: block;
-    margin-top: 2rem;
-    padding-top: 1rem;
-    border-top: 2px solid #00000031;
-    order: 2;
+.header__nav__links {
+    display: none;
 }
-.header__navbar__links--active .link li {
-    margin-block: 1.5rem;
-}
-.header__navbar__links--active .link ul {
-   display: none;
-}
-.header__navbar__links--active .btn {
+.header__nav-active .header__nav__links {
     display: flex;
-    justify-content: flex-end;
-    position: relative;
+    flex-direction: column;
+    row-gap: 2.2rem;
+    margin: 100px 0 0 75px;
+    transition: display .6s .2s;
 }
-.header__navbar__links--active .btn::before {
-    content: 'Ardev digital';
-    position: absolute;
-    left: 0;
+.header__nav__btns {
+    display: flex;
+    column-gap: var(--spaceBlock);
 }
-.header__navbar__links--active .btn__menu__open {
+.btn__theme-dark {
     display: none;
 }
-.header__navbar__links--active .btn__menu__close {
+.btn__menu-close {
+    display: none;
+}
+.header__nav-active .btn__menu-close {
     display: block;
 }
-.header__navbar__links--active .btn .btn__search {
+.header__nav-active .btn__menu-open {
     display: none;
 }
-.btn__search:hover, .btn__menu:hover {
-    cursor: pointer;
-}
-.btn__search input, .btn__menu__close {
-    display: none;
-}
-.header__title {
-    margin-block: 4rem;
-}
-.header__title__head  h1 {
-   font-size: 2.5rem;
-   line-height: 1.3;
-   letter-spacing: -1px;
-   margin-bottom: 1rem;
-}
-.header__title__head  span {
-    display: block;
-    color: var(--blueColor);
-}
-.header__title__head .btn {
-margin-block: 2rem;
-}
-.header__title__head .btn  a {
-    font-weight: 700;
-    color: var(--blueColor);
-    padding: 1rem;
-    margin-right: 1rem;
-    border: 1px solid var(--blueColor);
-    border-radius: 5px;
-}
-.header__title__head .btn  a:nth-child(1) {
-    color: var(--lightColor);
-    background-color: var(--blueColor);
-    border-color: var(--darkColor);
-}
-.header__title__head .btn  a:nth-child(1):hover {
-    opacity: .7;
-}
-.header__title__head .btn  a:nth-child(2):hover {
-    background-color: hsl(0, 0%, 100%);
-    border-color: var(--pulpleColor);
-}
-.header__title__bannere {
-    display: none;
-}
-/* responsive header */
-@media screen and (min-width: 667px) {
-    .header__title__head  h1 {
-        font-size: 2.8rem;
-    }
-    .header__title__head  p {
-        font-size: 1.35rem;
-    }
-}
-@media screen and (min-width: 992px) {
-
-    .header__navbar__links {
-        justify-content: space-between;
-        width: 80%;
-    }
-    .header__navbar__links .link {
-        width: 91%;
-        display: flex;
-        justify-content: flex-end;
-        column-gap: 4rem;
-    }
-    .header__navbar__links .link ul {
-        display: none;
-    }
-    .cmdSite, .cmdLogiciel {
-        display: none;
-    }
-    .produits__title a, .services__title a,
-    .apropos__title a {
-        display: flex;
-        align-items: flex-start;
-    }
-    .btn__menu {
-        display: none;
-    }
-}
-@media screen and (min-width: 1024px) {
-    .header__title__head  h1 {
-        font-size: 3rem;
-    }
-    .header__title {
-        display: flex;
-    }
-    .header__title__head {
-        width: 42rem;
-    }
-    .header__title__head .btn {
-       margin-top: 2.8rem;
-    }
-    .header__title__bannere {
-        /* display: block; */
-    }
-}
-@media screen and (min-width: 1200px) {
-    .header__navbar__links .link {
-        justify-content: space-between;
-        column-gap: 0;
-    }
-    .cmdSite, .cmdLogiciel {
-        display: block;
-    }
-}
-
-
-/* || MAIN || */
-.main {
-    height: 10rem;
-}
-
-
-/* || FOOTER || */
-.footer {
+.header__content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: justify;
+    margin-block: 50px;
+}
+.header__content h1 {
+    font-size: 1.5rem;
     text-align: center;
-    row-gap: 2rem;
-    border-top: 1px solid;
-    padding: 3rem;
+    color: var(--gray);
 }
-.footer__contact h2 {
-    margin-block: 1rem;
+.header__content h4 {
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 1.2em;
 }
-.footer .email a {
-    display: block;
+.title__btns {
+    font-family: 'Lora', serif;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: var(--spaceBlock);
+    margin-block: var(--spaceBlock);
 }
-.footer .email a:nth-child(1) {
-    text-decoration: line-through;
+.title__btns > a {
+    text-align: center;
+    width: 100%;
+    padding: 0.8em;
+    border: 1px solid var(--gray);
+    transition: background-color .6s;
 }
-.footer .tel {
-    text-align: right;
-    margin: 0 2.5rem 1rem 0;
+.btn-downloadCV {
+    color: var(--light);
+    background-color: var(--gray);
+}
+.btn-downloadCV:hover {
+   opacity: 0.9;
+}
+.btn-voirCV:hover {
+    background-color: #5252661c;
+}
+.header__content__img {
+    margin-bottom: var(--spaceBlock);
+    order: -1;
+}
+.header__content__img img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+
+/* RESPONSIVE */
+@media screen and (min-width: 768px) {
+    .header__content {
+        flex-direction: row;
+        justify-content: space-between;
+        column-gap: var(--spaceBlock);
+        padding-inline: var(--spaceBlock);
+    }
+    .header__nav__links {
+        display: flex;
+        column-gap: 2.2rem;
+        margin-inline: 50px;
+    }
+    .btn-menu {
+        display: none;
+    }
+    .header__content__title {
+        flex-basis: 25rem;
+        flex-grow: 3;
+        max-width: 35rem;
+    }
+    .title__btns {
+        flex-direction: row;
+        column-gap: var(--spaceBlock);
+    }
+    .title__btns a {
+        padding-inline: 7px;
+        border-radius: 5px;
+    }
+    .btn-voirCV {
+        display: inline-block;
+        padding-inline: 10px;
+    }
+    .header__content__img {
+        width: 50%;
+        order: 0;
+    }
+    .header__content__img img {
+        width: 100%;
+        height: 100%;
+        border-radius: 5%;
+    }
+}
+@media screen and (min-width: 817px) {
+    .header__nav__links {
+        column-gap: 3.2rem;
+    }
+    .header__content h1 {
+        font-size: 38px;
+    }
+    .header__content h4 {
+        font-size: 1.1rem;
+        margin-top: 0.8rem;
+    }
+    .title__btns {
+        margin-top: 2rem;
+    }
+}
+@media screen and (min-width: 1092px) {
+    #container {
+        max-width: 85rem;
+    }
+    .header__nav__links {
+        column-gap: 6rem;
+    }
+    .header__content {
+        line-height: 2rem;
+    }
+    .header__content h1 {
+        font-size: 52px;
+    }
+    .header__content h4 {
+        font-size: 1.2rem;
+        margin-top: 0.8rem;
+    }
+    .title__btns {
+        flex-direction: row;
+        column-gap: var(--spaceBlock);
+        margin-top: 2rem;
+
+    }
 }
