--- a/style.css
+++ b/style.css
@@ -38,7 +38,12 @@ a {
     text-decoration: none;
     color: var(--dark);
 }
+input, textarea {
+    min-height: 35px;
+    width: 100%;
+}
 svg {
+    fill: var(--gray);
     width: 24px;
     height: 24px;
 }
@@ -155,7 +160,6 @@ header {
         flex-direction: row;
         justify-content: space-between;
         column-gap: var(--spaceBlock);
-        padding-inline: var(--spaceBlock);
     }
     .header__nav__links {
         display: flex;
@@ -229,5 +233,85 @@ header {
         column-gap: var(--spaceBlock);
         margin-top: 2rem;
 
+    }
+}
+
+/* FOOTER */
+footer {
+    padding-inline: var(--spaceBlock);
+    margin-block: 50px;
+}
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: var(--spaceBlock);
+}
+.contact__perso {
+    font-size: 1.3rem;
+    width: 80%;
+    margin: var(--spaceBlock) auto;
+}
+.contact__perso h2 {
+    font-size: 1.6rem;
+    text-align: center;
+    color: var(--gray);
+    margin-bottom: 50px;
+}
+.links-sociaux {
+    margin-top: 30px;
+}
+.links-sociaux a:nth-child(1) {
+    margin-right: var(--spaceBlock);
+}
+.contact__perso > a, .contact__perso > p {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    margin-block: 10px;
+}
+.contact__form {
+    padding: var(--spaceBlock);
+    border: 1px solid var(--gray);
+}
+.contact__form div {
+    margin-bottom: 20px;
+}
+.validation-right {
+    display: flex;
+    column-gap: 20px;
+}
+input[type="checkbox"] {
+    width: 70px;
+}
+.contact__form button {
+    width: 100%;
+    font-size: 1em;
+    color: var(--light);
+    background-color: var(--gray);
+    padding: 12px;
+    margin-block: var(--spaceBlock);
+    border: none;
+}
+
+@media screen and (min-width: 768px) {
+    .contact {
+        flex-direction: row;
+        column-gap: var(--spaceBlock);
+    }
+    .contact__perso h2 {
+        font-size: 2rem;
+        margin-bottom: 50px;
+    }
+    .contact__form {
+        border-radius: 15px;
+    }
+    input[type="checkbox"] {
+        width: 30px;
+    } 
+}
+@media screen and (min-width: 817px) {
+    .contact__perso h2 {
+        font-size: 2rem;
     }
 }
