--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
     --light: #ffffff;
     --gray: #484873;
     --graySecond: #e6e6e6;
+    --red: #e76f51;
     --spaceBlock: 20px;
+    --spaceTwo: 50px;
 }
 
 /* RESET */
@@ -31,6 +33,11 @@ h1, h2, h3, h4 {
     font-weight: 700;
     font-size: 16px;
 }
+h2 {
+    color: var(--gray);
+    font-size: 1.5rem;
+    margin-bottom: var(--spaceTwo);
+}
 ul {
     list-style: none;
 }
@@ -47,6 +54,16 @@ svg {
     width: 24px;
     height: 24px;
 }
+/* responsive styles generals*/
+@media screen and (min-width: 700px) {
+    #container {
+        padding: var(--spaceBlock);
+    }
+    h2 {
+        font-size: 2rem;
+    }
+}
+
 
 /* HEADER */
 header {
@@ -106,7 +123,7 @@ header {
     flex-direction: column;
     align-items: center;
     text-align: justify;
-    margin-block: 50px;
+    margin-block: var(--spaceTwo);
 }
 .header__content h1 {
     font-size: 1.5rem;
@@ -135,14 +152,17 @@ header {
     transition: background-color .6s;
 }
 .btn-downloadCV {
+    color: var(--red);
+}
+.btn-downloadCV:hover {
+   background-color: #5252661c;
+}
+.btn-voirCV {
     color: var(--light);
     background-color: var(--gray);
 }
-.btn-downloadCV:hover {
-   opacity: 0.9;
-}
 .btn-voirCV:hover {
-    background-color: #5252661c;
+    opacity: 0.9;
 }
 .header__content__img {
     margin-bottom: var(--spaceBlock);
@@ -164,7 +184,7 @@ header {
     .header__nav__links {
         display: flex;
         column-gap: 2.2rem;
-        margin-inline: 50px;
+        margin-inline: var(--spaceTwo);
     }
     .btn-menu {
         display: none;
@@ -232,14 +252,113 @@ header {
         flex-direction: row;
         column-gap: var(--spaceBlock);
         margin-top: 2rem;
+    }
+}
 
+/* MENU */
+main {
+    padding: var(--spaceTwo) var(--spaceBlock);
+}
+.services__title svg {
+    fill: var(--light);
+    stroke: var(--light);
+}
+.services__content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 30px;
+}
+.services__content > div {
+    text-align: center;
+    padding: 30px;
+    border: 1px solid var(--gray);
+    border-radius: 15px;
+}
+.services__content a {
+    color: var(--light);
+}
+.gestion__fin {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    background-color: var(--red);
+}
+.dev__web {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+    background-color: #2a9d8f;
+}
+.dev__logiciel {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    background-color: var(--gray);
+}
+.services__content h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 12px;
+    font-size: 1.5em;
+}
+.services__content p {
+    text-align: justify;
+    line-height: 1.8;
+    margin-block: var(--spaceBlock);
+}
+.services__content .more {
+    font-family: 'Lora', serif;
+}
+.portfolio {
+    margin-block: 100px;
+}
+
+/* responsive */
+@media screen and (min-width: 768px) {
+    .gestion__fin {
+        grid-column: 2 / 4;
+        grid-row: 1 / 2;
+    }
+    .dev__web {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+    .dev__logiciel {
+        grid-column: 3 / 5;
+        grid-row: 2 / 3;
+    }
+    .services__content > div {
+        box-shadow: 0 0 14px 1px var(--dark);
+        border: none;
+    }
+    .services__content > div:hover {
+        animation: .6s ease-in displayMove;
+    }
+    .services__content > div:active {
+       box-shadow: none;
+    }
+
+    @keyframes displayMove {
+        0% {
+            transform: rotate(0deg);
+        }
+        50% {
+            transform: rotate(3deg);
+        }
+        100% {
+            transform: rotate(0deg);
+        }
+    }
+}
+@media screen and (min-width: 1024px) {
+    .services__content > div {
+        padding: 100px 50px;
     }
 }
 
 /* FOOTER */
 footer {
     padding-inline: var(--spaceBlock);
-    margin-block: 50px;
+    margin-block: var(--spaceTwo);
 }
 .contact {
     display: flex;
@@ -252,11 +371,11 @@ footer {
     width: 80%;
     margin: var(--spaceBlock) auto;
 }
-.contact__perso h2 {
-    font-size: 1.6rem;
+.contact__perso h3 {
+    font-size: 1.5rem;
     text-align: center;
     color: var(--gray);
-    margin-bottom: 50px;
+    margin-bottom: var(--spaceTwo);
 }
 .links-sociaux {
     margin-top: 30px;
@@ -276,6 +395,9 @@ footer {
 }
 .contact__form div {
     margin-bottom: 20px;
+}
+.contact__form textarea {
+    height: 100px;
 }
 .validation-right {
     display: flex;
@@ -301,7 +423,7 @@ input[type="checkbox"] {
     }
     .contact__perso h2 {
         font-size: 2rem;
-        margin-bottom: 50px;
+        margin-bottom: var(--spaceTwo);
     }
     .contact__form {
         border-radius: 15px;
