--- a/pages/styles/portfolio.css
+++ b/pages/styles/portfolio.css
@@ -1,7 +1,7 @@
 .header__title {
     font-size: 1.5rem;
     color: var(--gray);
-    margin-top: 100px;
+    margin: 100px 0 0 var(--spaceTwo);
 }
 @media screen and (min-width: 768px) {
     .header__title {
