--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
     padding: 0;
 }
 
+/* PREFERS COLOR THEME */
+
+
 /* STYLES GENERALS */
 body {
     font-family: 'Roboto', sans-serif;
@@ -28,6 +31,7 @@ body {
     font-size: 16px;
     line-height: 1.5em;
     min-height: 100vh;
+    background-color: var(--light);
 }
 #container {
     margin: 0 auto;
@@ -197,10 +201,13 @@ svg {
     margin-bottom: var(--spaceBlock);
     order: -1;
 }
-.header__content__img img {
+.img-small {
     width: 250px;
     height: 250px;
     border-radius: 50%;
+}
+.img-full {
+    display: none;
 }
 
 /* RESPONSIVE */
@@ -209,6 +216,8 @@ svg {
         flex-direction: row;
         justify-content: space-between;
         column-gap: var(--spaceBlock);
+        position: relative;
+
     }
     .header__nav__links {
         display: flex;
@@ -238,11 +247,18 @@ svg {
     .header__content__img {
         width: 50%;
         order: 0;
+        z-index: -1;
     }
-    .header__content__img img {
-        width: 100%;
-        height: 100%;
-        border-radius: 5%;
+    .img-small {
+        display: none;
+    }
+    .img-full {
+        display: block;
+        max-width: 30rem;
+        height: auto;
+        position: fixed;
+        top: 80px;
+        left: 48%;
     }
 }
 @media screen and (min-width: 817px) {
@@ -260,6 +276,13 @@ svg {
         margin-top: 2rem;
     }
 }
+@media screen and (min-width: 1024px) {
+    .img-full {
+        max-width: 40rem;
+        top: 50px;
+        left: 50%;
+    }
+}
 @media screen and (min-width: 1092px) {
     .header__nav {
         padding-inline: 5rem;
@@ -269,7 +292,7 @@ svg {
     }
     .header__content {
         line-height: 2rem;
-        margin: 0 auto;
+        margin: var(--spaceTwo) auto;
     }
     .header__content h1 {
         font-size: 52px;
@@ -283,6 +306,9 @@ svg {
         column-gap: var(--spaceBlock);
         margin-top: 2rem;
     }
+    .img-full {
+        left: 55%;
+    }
 }
 
 /* MENU */
@@ -290,6 +316,7 @@ main {
     padding: var(--spaceTwo) var(--spaceBlock);
     max-width: var(--content);
     margin: 0 auto;
+    background-color: var(--light);
 }
 .services__content svg {
     font-size: 28px;
@@ -343,6 +370,12 @@ main {
     font-family: 'Lora', serif;
     text-align: center;
 }
+.services__content .more::after {
+    content: url('./img/expand_more.svg');
+    display: inline-block;
+    transform: translateY(8px);
+    margin-left: 2px;
+}
 .portfolio {
     margin-block: 100px;
 }
@@ -392,9 +425,11 @@ main {
 
 /* FOOTER */
 .contact {
-    padding: var(--spaceBlock);
+    padding: var(--spaceBlock) var(--spaceBlock) var(--spaceTwo);
+    
+    background-color: var(--light);
 }
-.contact > div{
+.contact > div {
     display: flex;
     flex-direction: column;
     align-items: center;
