--- a/style.css
+++ b/style.css
@@ -21,9 +21,6 @@
     padding: 0;
 }
 
-/* PREFERS COLOR THEME */
-
-
 /* STYLES GENERALS */
 body {
     font-family: 'Roboto', sans-serif;
@@ -370,14 +367,66 @@ main {
     font-family: 'Lora', serif;
     text-align: center;
 }
-.services__content .more::after {
+.more::after {
     content: url('./img/expand_more.svg');
     display: inline-block;
     transform: translateY(8px);
     margin-left: 2px;
 }
 .portfolio {
-    margin-block: 100px;
+    margin-block: var(--spaceTwo);
+}
+.portfolio__content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+}
+.portfolio__projet {
+    display: block;
+    max-width: 400px;
+    position: relative;
+}
+.portfolio__projet img {
+    width: 100%;
+    min-height: 300px;
+}
+.portfolio__projet img + div {
+    text-align: center;
+    color: var(--light);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 12px;
+    background-color: var(--gray);
+    padding: var(--spaceBlock);
+    margin-top: -7px;
+    position: relative;
+}
+.portfolio__projet img + div::before {
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 30px;
+    background-color: var(--gray);
+    border-top-right-radius: 25px;
+    position: absolute;
+    top: -20px;
+    left: 0;
+}
+.portfolio__projet h3 {
+    font-size: 1.2em;
+    text-align: center;
+}
+.portfolio .more {
+    display: block;
+    font-size: 1.2rem;
+    font-family: 'Lora', serif;
+    text-align: center;
+    margin-block: var(--spaceBlock);
 }
 
 /* responsive */
