--- a/pages/styles/portfolio.css
+++ b/pages/styles/portfolio.css
@@ -1,17 +1,42 @@
+/*HEADER*/
 .header__title {
-    font-size: 1.5rem;
-    color: var(--gray);
-    margin: 100px 0 0 var(--spaceTwo);
+    position: relative;
 }
-@media screen and (min-width: 768px) {
-    .header__title {
-        font-size: 2rem;
-    }
+.header__title svg {
+    width: 100%;
+    height: 100%;
+}
+.header__title h1 {
+    font-size: 24px;
+    letter-spacing: 0.5rem;
+    color: var(--light);
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-150px, -50px); 
 }
 
-/* PROVISOIRE */
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+/*MAIN*/
+.portfolio__content-pg {
+    display: grid;
+    grid-template-columns:repeat(auto-fill, 400px);
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: var(--spaceBlock);
+}
+.projet-3 {
+    align-self: self-start;
+    align-content: flex-start;
+}
+
+@media screen and (min-width: 768px) {
+    .header__title h1 {
+        font-size: 32px;
+    }
+}
+@media screen and (min-width: 1094px) {
+    .portfolio__content-pg {
+        padding-inline: 10%;
+    }
 }
